product details (temp solution)

--- a/StoreApp/Views/Shared/_Layout.cshtml
+++ b/StoreApp/Views/Shared/_Layout.cshtml
@@ -20,9 +20,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Store", "Index", "Store")</li>
-                    <li>@Html.ActionLink("Details", "Index", "Details")</li>
-                    <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                    <li>@Html.ActionLink("Склад", "Index", "Store")</li>
+                    <li>@Html.ActionLink("Детали", "Index", "Details")</li>
+                    <li>@Html.ActionLink("Схемы", "Index", "ProductsDetails")</li>
+                    <li>@Html.ActionLink("Продукты", "Index", "Products")</li>
                 </ul>
             </div>
         </div>
