Store renamed to Materials entity

--- a/StoreApp/Views/Shared/_Layout.cshtml
+++ b/StoreApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Склад", "Index", "Store")</li>
+                    <li>@Html.ActionLink("Материалы", "Index", "Materials")</li>
                     <li>@Html.ActionLink("Детали", "Index", "Details")</li>
                     <li>@Html.ActionLink("Схемы", "Index", "ProductsDetails")</li>
                     <li>@Html.ActionLink("Продукты", "Index", "Products")</li>
