--- a/StoreApp/Views/Details/Delete.cshtml
+++ b/StoreApp/Views/Details/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Store.name)
+            @Html.DisplayNameFor(model => model.Material.name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Store.name)
+            @Html.DisplayFor(model => model.Material.name)
         </dd>
 
     </dl>
