--- a/StoreApp/Views/Details/Index.cshtml
+++ b/StoreApp/Views/Details/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.count)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Store.name)
+            @Html.DisplayNameFor(model => model.Material.name)
         </th>
         <th></th>
     </tr>
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.count)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Store.name)
+            @Html.DisplayFor(modelItem => item.Material.name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
