--- a/StoreApp/Views/Materials/Delete.cshtml
+++ b/StoreApp/Views/Materials/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model StoreApp.Models.Store
+﻿@model StoreApp.Models.Material
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Store</h4>
+    <h4>Material</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
