--- a/StoreApp/Views/Products/Edit.cshtml
+++ b/StoreApp/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model StoreApp.Models.Product
+﻿@model StoreApp.Models.ProductEditViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -6,6 +6,9 @@
 
 <h2>Edit</h2>
 
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
 @using (Html.BeginForm())
 {
@@ -13,29 +16,51 @@
     
     <div class="form-horizontal">
         <h4>Product</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(model => model.product.id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.product.name, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.product.name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.product.name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <table class="table">
+                <tr>
+                    <th>
+                        Детали
+                    </th>
+                    <th></th>
+                </tr>
+
+                @foreach (var item in Model.details)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.name)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "EditDetail", new { id = item.id }) |
+                            @Html.ActionLink("Delete", "DeleteDetail", new { id = item.id })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+
+            @Html.ActionLink("Create", "CreateDetail")
+        </div>
+
+        <div class="form-group">
+            <div class="">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
