--- a/StoreApp/Views/Products/Index.cshtml
+++ b/StoreApp/Views/Products/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -31,3 +28,7 @@
 }
 
 </table>
+
+<p>
+    @Html.ActionLink("Add New", "Create")
+</p>
