--- a/StoreApp/Views/Products/Edit.cshtml
+++ b/StoreApp/Views/Products/Edit.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Редактирование изделия</h2>
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку изделий", "Index")
 </div>
 
 @using (Html.BeginForm())
@@ -15,12 +15,12 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Product</h4>
+
+        <h4>Наименование изделия</h4>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.product.id)
 
         <div class="form-group">
-            @*@Html.LabelFor(model => model.product.name, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.product.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.product.name, "", new { @class = "text-danger" })
@@ -28,10 +28,16 @@
         </div>
 
         <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" value="Сохранить" class="btn btn-default" />
+            </div>
+        </div>
+
+        <div class="form-group">
             <table class="table">
                 <tr>
                     <th>
-                        Детали
+                        Список делатей в изделии
                     </th>
                     <th></th>
                 </tr>
@@ -40,24 +46,22 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.name)
+                            @Html.DisplayFor(modelItem => item.name) - @Html.DisplayFor(modelItem => item.count) шт
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "EditDetail", new { id = item.id }) |
-                            @Html.ActionLink("Delete", "DeleteDetail", new { id = item.id })
+                            @Html.ActionLink("Редактировать", "EditDetail", new { id = item.id}) |
+                            @Html.ActionLink("Удалить", "DeleteDetail", new { id = item.id })
                         </td>
                     </tr>
                 }
 
+                <tr>
+                    <td colspan="2">
+                        @Html.ActionLink("Добавить деталь в изделие", "AddDetail", new { id = Model.product.id })
+                    </td>
+                </tr>
+
             </table>
-
-            @Html.ActionLink("Create", "CreateDetail")
-        </div>
-
-        <div class="form-group">
-            <div class="">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
         </div>
     </div>
 }
