--- a/StoreApp/Views/Details/Delete.cshtml
+++ b/StoreApp/Views/Details/Delete.cshtml
@@ -4,45 +4,21 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Удаление детали</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены, что хотите удалить указанный материал?</h3>
 <div>
-    <h4>Detail</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
+    <p>Материал <b>@Html.DisplayFor(model => model.name)</b> состоит из <b>@Html.DisplayFor(model => model.Material.name) (@Html.DisplayFor(model => model.count) шт)</b></p>
 
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
+    <div>
+        @using (Html.BeginForm()) {
+            @Html.AntiForgeryToken()
 
-        <dt>
-            @Html.DisplayNameFor(model => model.count)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.count)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Material.name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Material.name)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Удалить" class="btn btn-default" /> |
+                @Html.ActionLink("Вернуться к списку деталей", "Index")
+            </div>
+        }
+    </div>
 </div>
