--- a/StoreApp/Views/Products/Delete.cshtml
+++ b/StoreApp/Views/Products/Delete.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Удаление изделия</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены, что хотите удалить указанный изделие?</h3>
 <div>
-    <h4>Product</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.name)
+            @*@Html.DisplayNameFor(model => model.name)*@
+            Наименование
         </dt>
 
         <dd>
@@ -25,8 +25,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            @Html.ActionLink("Ввернуться к списку изделией", "Index")
         </div>
     }
 </div>
