--- a/StoreApp/Views/Products/Index.cshtml
+++ b/StoreApp/Views/Products/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Список доступных продуктов</h2>
+<h2>Список изделий</h2>
 
 <p>
     @Html.ActionLink("Добавить новый продукт", "Create")
