deleted comments, test actions? actualization titles

--- a/StoreApp/Views/Details/Delete.cshtml
+++ b/StoreApp/Views/Details/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Detail
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление детали";
 }
 
 <h2>Удаление детали</h2>
