--- a/StoreApp/Views/Materials/Edit.cshtml
+++ b/StoreApp/Views/Materials/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Material
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Редактирование материала";
 }
 
 <h2>Редактирование материала</h2>
