--- a/StoreApp/Views/Products/Edit.cshtml
+++ b/StoreApp/Views/Products/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.ProductEditViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Редактирование изделия";
 }
 
 <h2>Редактирование изделия</h2>
