--- a/StoreApp/Views/Products/Index.cshtml
+++ b/StoreApp/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<StoreApp.Models.Product>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Список изделий";
 }
 
 <h2>Список изделий</h2>
