--- a/StoreApp/Views/Details/Create.cshtml
+++ b/StoreApp/Views/Details/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Detail
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление новой детали";
 }
 
 <h2>Добавление новой детали</h2>
@@ -17,7 +17,6 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <label class = "control-label col-md-2">Наименование</label>
-            @*@Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -26,7 +25,6 @@
 
         <div class="form-group">
             <label class="control-label col-md-2">Материал</label>
-            @*@Html.LabelFor(model => model.material_id, "material_id", htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.DropDownList("material_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.material_id, "", new { @class = "text-danger" })
@@ -35,7 +33,6 @@
 
         <div class="form-group">
             <label class="control-label col-md-2">Кол-во для детали</label>
-            @*@Html.LabelFor(model => model.count, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.count, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.count, "", new { @class = "text-danger" })
