--- a/StoreApp/Views/Details/Edit.cshtml
+++ b/StoreApp/Views/Details/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Detail
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Редактирование детали";
 }
 
 <h2>Редактирование детали</h2>
@@ -19,7 +19,6 @@
         @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
-            @*@Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <label class = "control-label col-md-2">Наименование</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
@@ -28,7 +27,6 @@
         </div>
 
         <div class="form-group">
-            @*@Html.LabelFor(model => model.material_id, "material_id", htmlAttributes: new { @class = "control-label col-md-2" })*@
             <label class="control-label col-md-2">Материал</label>
             <div class="col-md-10">
                 @Html.DropDownList("material_id", null, htmlAttributes: new { @class = "form-control" })
@@ -37,7 +35,6 @@
         </div>
 
         <div class="form-group">
-            @*@Html.LabelFor(model => model.count, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <label class="control-label col-md-2">Кол-во для детали</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.count, new { htmlAttributes = new { @class = "form-control" } })
