--- a/StoreApp/Views/Materials/Create.cshtml
+++ b/StoreApp/Views/Materials/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Material
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление материала";
 }
 
 <h2>Добавление материала</h2>
@@ -17,7 +17,6 @@
         </p>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @*@Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <label class = "control-label col-md-2">Наименование</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
@@ -26,7 +25,6 @@
         </div>
 
         <div class="form-group">
-            @*@Html.LabelFor(model => model.count, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <label class="control-label col-md-2">Количество на складе</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.count, new { htmlAttributes = new { @class = "form-control" } })
