--- a/StoreApp/Views/Products/AddDetail.cshtml
+++ b/StoreApp/Views/Products/AddDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.ProductsDetail
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Детали продукта";
 }
 
 <h2>Детали продукта</h2>
