--- a/StoreApp/Views/Products/Create.cshtml
+++ b/StoreApp/Views/Products/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Product
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление новго изделия";
 }
 
 <h2>Добавление новго изделия</h2>
@@ -17,7 +17,6 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @*@Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <label class="control-label col-md-2">Наименование</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
