--- a/StoreApp/Views/Products/Delete.cshtml
+++ b/StoreApp/Views/Products/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreApp.Models.Product
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удаление изделия";
 }
 
 <h2>Удаление изделия</h2>
@@ -11,7 +11,6 @@
 
     <dl class="dl-horizontal">
         <dt>
-            @*@Html.DisplayNameFor(model => model.name)*@
             Наименование
         </dt>
 
