--- a/StoreApp/Views/Statistics/Index.cshtml
+++ b/StoreApp/Views/Statistics/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<StoreApp.Models.StatisticsViewModel>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Статистика";
 }
 
 <h2>Статистика</h2>
