htmlhelper, fixed angular

--- a/StoreApp/Views/Home/Index.cshtml
+++ b/StoreApp/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Store App</h1>
+    <h1>Складкской учет</h1>
+    <h2>Приложение для упраления списком материалов на складе и изготавления деталей из этих материалов</h2>
+    <p>Для управления материалами, деталями и изделиями необходимо перейти в соответсвующий раздел главного меню</p>
 </div>
