--- a/StoreApp/Views/Home/Index.cshtml
+++ b/StoreApp/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@
 
 <div class="jumbotron">
     <h1>Складкской учет</h1>
-    <h2>Приложение для упраления списком материалов на складе и изготавления деталей из этих материалов</h2>
+    <h2>Приложение для упраления списком материалов на складе и изготавления деталей</h2>
     <p>Для управления материалами, деталями и изделиями необходимо перейти в соответсвующий раздел главного меню</p>
 </div>
