--- a/StoreApp/Content/statistics.css
+++ b/StoreApp/Content/statistics.css
@@ -5,3 +5,23 @@
     table#productsList tr.selected > td {
         background-color: #dff0d8;
     }
+
+.waiter{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: rgba(75, 75, 75, 0.2);
+}
+
+
+
+.progress {
+    width: 450px;
+    border-radius: 5px;
+    position: relative;
+    top: 50%;
+    margin: 0 auto;
+}
