--- a/StoreApp/Views/Materials/Index.cshtml
+++ b/StoreApp/Views/Materials/Index.cshtml
@@ -9,30 +9,33 @@
 <p>
     @Html.ActionLink("Добавить новый материал", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            Наименование материала
-        </th>
-        <th>
-            Количество на складе
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.count)
-        </td>
-        <td>
-            @Html.ActionLink("Редактировать", "Edit", new { id=item.material_id }) |
-            @Html.ActionLink("Удалить", "Delete", new { id=item.material_id })
-        </td>
-    </tr>
-}
-
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>
+                Наименование материала
+            </th>
+            <th>
+                Количество на складе
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.count)
+                </td>
+                <td class="right-aligh">
+                    @Html.ActionLink("Редактировать", "Edit", new { id = item.material_id }) |
+                    @Html.ActionLink("Удалить", "Delete", new { id = item.material_id })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
