--- a/StoreApp/Views/Statistics/Index.cshtml
+++ b/StoreApp/Views/Statistics/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StoreApp.Models.StatisticsViewModel>
+﻿@*@model IEnumerable<StoreApp.Models.StatisticsViewModel>*@
 @{
     ViewBag.Title = "Статистика";
 }
@@ -11,10 +11,10 @@
 
 <div ng-app="productsApp" ng-controller="ProductsCtrl">
     <button class="btn btn-default" ng-click="updateProductsList()">
-        <span class="glyphicon glyphicon-refresh"></span> &nbsp;Обновить
+        <span class="glyphicon glyphicon-refresh"></span> &nbsp;Обновить список
     </button>
 
-    <button class="btn btn-default" ng-click="makeProduct()" ng-disabled="model.selectedProduct == null">
+    <button class="btn btn-default" ng-click="makeProduct()" ng-disabled="!isEnableMakeButton()">
         <span class="glyphicon glyphicon-new-window"></span> &nbsp;Изготовить деталь
     </button>
 
@@ -31,8 +31,22 @@
                 <td ng-bind="product.count"></td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2">
+                    Для изготовления детали выберите ее из списка и нажмите на кнопку <i>Изготовить деталь</i>
+                </td>
+            </tr>
+        </tfoot>
     </table>
-    <div ng-show="model.isLoading"><p>Загрузка...</p></div>
+
+    <div class="waiter" ng-show="model.isLoading">
+        <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                <span class="sr-only"></span>
+            </div>
+        </div>
+    </div>
 </div>
 
 
